fixed body and nav bar spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -74,9 +74,25 @@
  article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
    display: block;
  }
+
+ #header{
+  width:100%; 
+  background: url(yourimage);
+  }
+#headerContent{
+  margin: 0 auto; 
+  width: 960px;
+  padding-top: 2em;
+  }
+
+  #bodyContent {
+    padding-left: 2em;
+  }
+
  
  body {
-   margin: 0;
+   margin: 50%;
+   float: left;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
    font-size: 1rem;
    font-weight: 400;
